# tabulensis

./: .cursorignore  .cursorindexingignore  .editorconfig  .gitattributes  .gitattributes.example  .gitignore  AGENTS.md  APP_INTENT.md  CHANGELOG.md  Cargo.toml  LICENSE.txt  META_METHODOLOGY_IMPLEMENTATION_CHECKLIST.md  OPERATING_AGREEMENT.md  README.md  REPO_STATE.md  RESEND_SETUP_CHECKLIST.md  SECURITY_DAILY_CHECKLIST.md  STRIPE_WORKER_NEXT_STEPS.md  THIRD_PARTY_NOTICES.txt  addressing_regressions_in_e2e.md  algorithmic_improvement.md  algorithmic_improvement_number_2.md  algorithmic_improvement_number_3.md  algorithmic_improvement_number_4.md  algorithmic_improvement_number_5.md  allocation_improvements.md  arc_cache_custom_crate_experiment.md  base64_custom_crate_code_experiment.md  base64_custom_crate_experiment.md  custom_crate_code_experiment.md  desktop_arc_cache_and_key_reuse_experiment.md  e2e_improvement.md  feature_list.json  feature_list.md  feature_list_refined.md  ideas.md  long_running_codex_agent.md  lru_custom_crate_code_experiment.md  meta_methodology.md  package-lock.json  (+21 more)
benchmarks/: README.md  (+10 more)
cli/: Cargo.toml
cli/src/: main.rs
cli/src/commands/: diff.rs  host.rs  info.rs  license.rs  mod.rs  pbip.rs
cli/src/output/: git_diff.rs  json.rs  mod.rs  text.rs
cli/tests/: determinism_cli_json.rs  git_textconv.rs  integration_tests.rs  perf_cli_jsonl_emit.rs
core/: Cargo.toml
core/benches/: diff_benchmarks.rs
core/examples/: basic_diff.rs  custom_config.rs  database_mode.rs  streaming.rs
core/fuzz/: Cargo.toml  seed_fixtures.yaml
core/fuzz/corpus/fuzz_m_section_and_ast/: if_then_else.txt  lambda.txt  let_in.txt  record_list.txt  try_otherwise.txt
core/fuzz/corpus/fuzz_open_pbix/: pbix_embedded_queries.pbix  pbix_legacy_one_query_a.pbix  pbix_no_datamashup_no_schema.pbix
core/fuzz/corpus/fuzz_open_workbook/: corrupt_base64.xlsx  duplicate_datamashup_parts.xlsx  mashup_base64_whitespace.xlsx  mashup_utf16_le.xlsx  minimal.xlsx  multi_query_with_embedded.xlsx  no_content_types.xlsx  one_query.xlsx  permissions_defaults.xlsx
core/fuzz/fuzz_targets/: fuzz_datamashup_parse.rs  fuzz_diff_grids.rs  fuzz_m_section_and_ast.rs  fuzz_open_pbix.rs  fuzz_open_workbook.rs
core/src/: addressing.rs  alignment_types.rs  architecture.md  capabilities.rs  column_alignment.rs  config.rs  container.rs  database_alignment.rs  datamashup.rs  datamashup_framing.rs  datamashup_package.rs  dax.rs  diff.rs  diffable.rs  engine.rs  error_codes.rs  excel_open_xml.rs  formula.rs  formula_diff.rs  grid_metadata.rs  grid_parser.rs  grid_view.rs  hashing.rs  lib.rs  m_ast.rs  m_diff.rs  m_section.rs  m_semantic_detail.rs  memory_estimate.rs  memory_metrics.rs  model.rs  model_diff.rs  object_diff.rs  package.rs  perf.rs  permission_bindings.rs  policy.rs  progress.rs  rect_block_move.rs  region_mask.rs  (+7 more)
core/src/alignment/: anchor_chain.rs  anchor_discovery.rs  assembly.rs  gap_strategy.rs  lap.rs  mod.rs  move_extraction.rs  row_metadata.rs  runs.rs
core/src/engine/: amr.rs  context.rs  grid_diff.rs  grid_primitives.rs  hardening.rs  mod.rs  move_mask.rs  sheet_diff.rs  workbook_diff.rs
core/src/m_ast/: step_model.rs
core/src/m_ast_diff/: apted.rs  gumtree.rs  mod.rs
core/src/matching/: hungarian.rs  mod.rs
core/src/output/: json.rs  json_lines.rs  json_write.rs  mod.rs
core/src/pbip/: diff.rs  mod.rs  normalize.rs  scan.rs  tests.rs  types.rs
core/tests/: addressing_pg2_tests.rs  amr_multi_gap_tests.rs  branch4_object_diff_tests.rs  d1_database_mode_tests.rs  d2_d4_database_mode_workbook_tests.rs  data_mashup_tests.rs  database_mode_wrapper_tests.rs  diff_op_coverage_audit_tests.rs  drawing_relationship_filter_tests.rs  e2e_perf_datamashup_decode.rs  e2e_perf_datamashup_text.rs  e2e_perf_datamodel_schema_parse.rs  e2e_perf_real_world.rs  e2e_perf_workbook_open.rs  engine_tests.rs  excel_open_xml_tests.rs  f7_formula_canonicalization_tests.rs  f7_formula_diff_integration_tests.rs  f7_formula_parser_tests.rs  f7_formula_shift_tests.rs  formula_coverage_audit_tests.rs  g10_row_block_alignment_grid_workbook_tests.rs  g11_row_block_move_grid_workbook_tests.rs  g12_column_block_move_grid_workbook_tests.rs  g12_rect_block_move_grid_workbook_tests.rs  g13_fuzzy_row_move_grid_workbook_tests.rs  g14_move_combination_tests.rs  g15_column_structure_row_alignment_tests.rs  g1_g2_grid_workbook_tests.rs  g5_g7_grid_workbook_tests.rs  g8_row_alignment_grid_workbook_tests.rs  g9_column_alignment_grid_workbook_tests.rs  grid_view_hashstats_tests.rs  grid_view_tests.rs  hardening_tests.rs  integration_test.rs  leaf_diff_equivalence_tests.rs  limit_behavior_tests.rs  m10_embedded_m_diff_tests.rs  m10_m_parser_tier2_tests.rs  (+38 more)
core/tests/common/: mod.rs
desktop/backend/: Cargo.toml
desktop/backend/src/: batch.rs  diff_runner.rs  events.rs  lib.rs  paths.rs  recents.rs  search.rs  tiny_lru.rs
desktop/backend/tests/: integration_smoke.rs
desktop/src-tauri/: Cargo.toml  FEATURES.md  tauri.conf.json
desktop/src-tauri/src/: batch.rs  diff_runner.rs  main.rs  search.rs
desktop/wx/: Cargo.toml
desktop/wx/src/: dev_scenario.rs  explain.rs  grid_preview.rs  logic.rs  main.rs  profiles.rs  profiles_dialog.rs  theme.rs  ui.rs  ui_constants.rs  xrc_validation.rs
desktop/wx/ui/: main.xrc
fixtures/: README.md  manifest.yaml  manifest_cli_tests.lock.json  manifest_cli_tests.yaml  manifest_perf_e2e.yaml  manifest_release_smoke.lock.json  manifest_release_smoke.yaml  pyproject.toml  requirements.txt
fixtures/src/: generate.py
fixtures/src/generators/: __init__.py  base.py  corrupt.py  database.py  grid.py  mashup.py  objects.py  pbix.py  perf.py  xlsb.py  zip_pad.py
fixtures/templates/: base_query.xlsx  vba_added.xlsm  vba_base.xlsm  vba_changed.xlsm
license_client/: Cargo.toml
license_client/src/: lib.rs
license_service/: .env.example  Cargo.toml
license_service/src/: main.rs
ui_payload/: Cargo.toml
ui_payload/src/: alignment.rs  analysis.rs  capabilities.rs  domain.rs  lib.rs  options.rs  outcome.rs
wasm/: Cargo.toml
wasm/src/: alignment.rs  lib.rs
(+2186 files in other folders)
