[package]
name = "excel_diff_cli"
version = "0.1.0"
edition = "2024"
description = "Command-line interface for comparing Excel workbooks"
license = "MIT"
repository = "https://github.com/dvora/excel_diff"
homepage = "https://github.com/dvora/excel_diff"

[[bin]]
name = "excel-diff"
path = "src/main.rs"
doc = false

[dependencies]
excel_diff = { path = "../core", features = ["model-diff", "parallel"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ui_payload = { path = "../ui_payload" }

[features]
default = []
perf-metrics = ["excel_diff/perf-metrics"]

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"

