[package]
name = "tabulensis-cli"
version = "0.1.0"
edition = "2024"
description = "Tabulensis command-line interface for comparing Excel workbooks"
license = "MIT"
repository = "https://tabulensis.com"
homepage = "https://tabulensis.com"

[[bin]]
name = "tabulensis"
path = "src/main.rs"
doc = false

[dependencies]
excel_diff = { path = "../core", features = ["model-diff", "parallel"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
ui_payload = { path = "../ui_payload" }
license_client = { path = "../license_client" }

[features]
default = []
perf-metrics = ["excel_diff/perf-metrics"]

[dev-dependencies]
serde_json = "1.0"
tempfile = "3"

