[package]
name = "excel_diff"
version = "0.1.0"
edition = "2024"
description = "A library for comparing Excel workbooks"
license = "MIT"
repository = "https://github.com/dvora/excel_diff"
homepage = "https://github.com/dvora/excel_diff"

[lib]
name = "excel_diff"
path = "src/lib.rs"

[features]
default = ["excel-open-xml", "std-fs", "vba", "dpapi"]
excel-open-xml = []
vba = ["dep:ovba"]
std-fs = []
perf-metrics = []
dev-apis = []
model-diff = []
legacy-api = []
parallel = ["dep:rayon"]
dpapi = []

[dependencies]
quick-xml = "0.32"
thiserror = "1.0"
rayon = { version = "1.10.0", optional = true }
zip = { version = "0.6", default-features = false, features = ["deflate"] }
base64 = "0.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xxhash-rust = { version = "0.8", features = ["xxh64", "xxh3"] }
rustc-hash = "1.1"
ovba = { version = "0.7.1", optional = true }
sha2 = "0.10"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }
serde_yaml = "0.9"

[[bench]]
name = "diff_benchmarks"
harness = false
