[package]
name = "license_client"
version = "0.1.0"
edition = "2024"
description = "Tabulensis licensing client and local token store"
license = "MIT"

[dependencies]
base64 = "0.22"
directories = "5"
ed25519-dalek = { version = "2", features = ["std"] }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
thiserror = "1.0"
ureq = { version = "2.9", features = ["json", "tls"] }
uuid = { version = "1", features = ["v4"] }
whoami = "1.5"

[dev-dependencies]
serde_json = "1.0"
