[package]
name = "license_service"
version = "0.1.0"
edition = "2024"
description = "Tabulensis licensing backend service"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
rand = "0.8"
base64 = "0.22"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
ed25519-dalek = { version = "2", features = ["std"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
serde_json = "1.0"
