[package]
name = "ui_payload"
version = "0.1.0"
edition = "2024"
description = "UI payload builder for excel_diff (snapshots + alignment)"
license = "MIT"
repository = "https://github.com/dvora/excel_diff"
homepage = "https://github.com/dvora/excel_diff"

[dependencies]
excel_diff = { path = "../core", default-features = false, features = ["excel-open-xml"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["model-diff"]
model-diff = ["excel_diff/model-diff"]
