[package]
name = "excel_diff_wasm"
version = "0.1.0"
edition = "2024"
description = "WebAssembly bindings for Tabulensis"
license = "MIT"
repository = "https://tabulensis.com"
homepage = "https://tabulensis.com"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
excel_diff = { path = "../core", default-features = false, features = ["excel-open-xml", "model-diff", "base64-crate", "custom-json-schema"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
serde_json = "1.0"
console_error_panic_hook = "0.1"
ui_payload = { path = "../ui_payload" }

