[package]
name = "desktop_backend"
version = "0.1.0"
edition = "2021"
description = "Backend logic for Tabulensis desktop apps"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
excel_diff = { path = "../../core", default-features = false, features = ["excel-open-xml", "vba", "base64-crate"] }
ui_payload = { path = "../../ui_payload" }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4"] }
time = { version = "0.3", features = ["formatting"] }
thiserror = "1.0"
rust_xlsxwriter = "0.71"
lru = { version = "0.12", optional = true }
walkdir = "2.5"
globset = "0.4"
crossbeam-channel = "0.5"
directories = "5.0"

[features]
default = ["model-diff", "lru-crate"]
lru-crate = ["dep:lru"]
custom-lru = []
arc-cache = []
model-diff = ["excel_diff/model-diff"]
perf-metrics = ["excel_diff/perf-metrics"]
