[package]
name = "excel_diff_desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop shell for Excel Diff"
license = "MIT"
build = "build.rs"

[dependencies]
tauri = { version = "2.5.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
excel_diff = { path = "../../core", default-features = false, features = ["excel-open-xml", "vba"] }
ui_payload = { path = "../../ui_payload" }
rfd = "0.14"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
time = { version = "0.3", features = ["formatting"] }
thiserror = "1.0"
rust_xlsxwriter = "0.71"
lru = "0.12"
walkdir = "2.5"
globset = "0.4"

[features]
default = ["model-diff"]
model-diff = ["excel_diff/model-diff"]
perf-metrics = ["excel_diff/perf-metrics"]

[build-dependencies]
tauri-build = { version = "2.5.3" }
