[package]
name = "excel_diff_desktop"
version = "0.1.0"
edition = "2021"
description = "Desktop shell for Tabulensis"
license = "MIT"
build = "build.rs"

[dependencies]
tauri = { version = "2.5.3" }
excel_diff = { path = "../../core", default-features = false, features = ["excel-open-xml", "vba"] }
ui_payload = { path = "../../ui_payload" }
desktop_backend = { path = "../backend" }
rfd = "0.17.2"

[features]
default = ["model-diff"]
model-diff = ["excel_diff/model-diff", "desktop_backend/model-diff"]
perf-metrics = ["excel_diff/perf-metrics", "desktop_backend/perf-metrics"]

[build-dependencies]
tauri-build = { version = "2.5.3" }
