[package]
name = "desktop_wx"
version = "0.1.0"
edition = "2021"
description = "wxDragon desktop GUI for Tabulensis"
license = "MIT"

[dependencies]
wxdragon = { version = "0.9.7", features = ["xrc"] }
wxdragon-sys = "0.9.7"
desktop_backend = { path = "../backend" }
ui_payload = { path = "../../ui_payload" }
serde_json = "1.0"
log = "0.4"
quick-xml = "0.32"
license_client = { path = "../../license_client" }
